# sglang-gemma4-triton-fallback

./: .gitignore  AGENTS.md  README.md  pyproject.toml
dashboard/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css
dashboard/tests/: data.test.ts  deck.test.ts
docs/: README.md  observed-results.md  reproduce-failure.md  verification.md
docs/issues/: flashinfer-bug.md  native-lora-bug.md
docs/run-results/: 2026-05-20.md
fixtures/ticket-triage/: README.md  schema.json  test.jsonl  train.jsonl  val.jsonl
runs/gemma4-base-score-20260520T124219Z/: score.json
runs/gemma4-merged-score-20260520T132849Z/: score.json
scripts/: __init__.py  check-processor-configs.sh  download-model.sh  install-sglang.sh  merge-lora.sh  merge_gemma4_lora.py  repair-processor-configs.sh  run-merged-sglang-check.sh  run-sglang-native-lora-check.sh  score-sglang-native-lora.sh  score_sglang_endpoint.py  serve-merged-sglang.sh  serve-sglang-native-lora.sh  ticket_triage.py  train-lora.sh
scripts/serving/: README.md  __init__.py  check-processor-configs.sh  repair-processor-configs.sh  run-base-sglang-score.sh  run-merged-sglang-check.sh  run-merged-sglang-score.sh  run-sglang-native-lora-check.sh  run-sglang-score.sh  score-sglang-chat.sh  score-sglang-native-lora.sh  score_sglang_endpoint.py  serve-merged-sglang.sh  serve-sglang-model.sh  serve-sglang-native-lora.sh  smoke-test.sh
scripts/setup/: README.md  __init__.py  gradient-env.sh  install-sglang.sh  setup-paperspace.sh  (+1 more)
tests/: test_scripts.py  test_ticket_triage.py
(+27 files in other folders)
