[project]
name = "sglang-gemma4-triton-fallback"
version = "0.1.0"
description = "Minimal Gemma 4 E2B SGLang Triton fallback repro."
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pyright>=1.1.390",
  "ruff>=0.8.0",
]
download = [
  "huggingface-hub>=0.27.0",
]
model = [
  "accelerate>=1.0.0",
  "distro>=1.9.0",
  "huggingface-hub>=0.27.0",
  "peft>=0.14.0",
  "torch==2.11.0",
  "transformers>=5.8.1,<6",
]
train = [
  "accelerate>=1.0.0",
  "peft>=0.14.0",
  "torch==2.11.0",
  "transformers>=5.8.1,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
include = ["scripts", "tests"]
typeCheckingMode = "strict"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
